Fixed headline alignment

--- a/css/website-style.css
+++ b/css/website-style.css
@@ -43,7 +43,7 @@ a{
     height: 100vh;
     z-index: 1000;
 }
-#LoadSpin {
+#LoadSpinner {
     margin-left: auto;
     margin-right: auto;
     margin-top: -135px;
@@ -77,9 +77,15 @@ a{
     width: 650px;
     height: 134px;
     margin-top: -64px;
-    z-index: -10;
+    z-index: -100;
+}
+#IntroHeadline{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 #IntroTextWrapper{
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -87,17 +93,9 @@ a{
     font-family: Cocogoose;
     font-size: 68px;
     letter-spacing: 2px;
-    margin-top: -59px;
     text-transform: uppercase;
-}
-#IntroText1{
-    margin-left: -270px;
-}
-#IntroText2{
-    margin-left: -240px;
-}
-#IntroText3{
-    margin-left: -200px;
+    margin-top: 3px;
+    margin-left: 7px;
 }
 
 
@@ -239,7 +237,7 @@ a{
     letter-spacing: 1.6px;
     text-transform: uppercase;
     width: 80px;
-    margin-top: 10px;
+    margin-top: 20px;
     padding-bottom: 30px;
 }
 .AboutIconImageWrapper{
